# max17261-driver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  max17261.c  max17261.h
include/: max17261.h
src/: max17261.c
